--- a/index.html
+++ b/index.html
@@ -10,119 +10,116 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
           <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
         </a>
-      <a href="https://stewilondanga.github.io/" class="social">
+    <a href="https://stewilondanga.github.io/" class="social">
           <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
         </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
+    <a href="https://twitter.com/stew_ilondanga" class="social">
           <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
         </a>
-    </div>
+  </div>
 
-    <header>
-        <h3 class="site-title">Site Title</h3>
-        <ul>
-          <li>Blog</li>
-          <li>Work</li>
-          <li>About</li>
-        </ul>
-     </header>
-     <section>
-        <article>
-          <div class="article-wrapper">
-            <div class="blog-label">
-            <div class="home-label">
+  <header>
+    <h3 class="site-title">Site Title</h3>
+    <ul>
+      <li>Blog</li>
+      <li>Work</li>
+      <li>About</li>
+    </ul>
+  </header>
+  <section>
+    <article>
+      <div class="article-wrapper">
+        <div class="blog-label">
+          <div class="home-label">
             <h4 class="home-label-title">BLOG</h4>
-            </div>
-            </div>
-            <div class="blog-list-home">
-              <div class="blog-thumbnail">
-                <div class="thumbnail-frame">
-
-                </div>
-              </div>
-              <div class="blog-list-content">
-                <h4>Blog Title Sample</h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
-              </div>
-
-            </div>
-            <div class="blog-list-home">
-              <div class="blog-thumbnail">
-               <div class="thumbnail-frame">
-
-               </div>
-              </div>
-              <div class="blog-list-content">
-                <h4>Blog Title Sample</h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
-              </div>
-
-            </div>
-            <div class="blog-list-home">
-              <div class="blog-thumbnail">
-                <div class="thumbnail-frame">
-
-                </div>
-              </div>
-              <div class="blog-list-content">
-                <h4>Blog Title Sample</h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
-              </div>
-
-            </div>
-            <div class="blog-list-home">
-              <div class="blog-thumbnail">
-                <div class="thumbnail-frame">
-
-                </div>
-              </div>
-              <div class="blog-list-content">
-                <h4>Blog Title Sample</h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
-              </div>
-
-            </div>
-            <div class="blog-list-home">
-              <div class="blog-thumbnail">
-                <div class="thumbnail-frame">
-
-                </div>
-              </div>
-              <div class="blog-list-content">
-                <h4>Blog Title Sample</h4>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
-              </div>
+          </div>
+        </div>
+        <div class="blog-list-home">
+          <div class="blog-thumbnail">
+            <div class="thumbnail-frame">
 
             </div>
           </div>
+          <div class="blog-list-content">
+            <h4>Blog Title Sample</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
+          </div>
 
-          </div>
-        </article>
-        <aside>
-          <div class="aside-about">
-            <div class="home-label aside-label">
-              <h4 class="home-label-title">ABOUT</h4>
-            </div>
-            <div class="aside-content-home">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum nam neque non rem rerum ipsa in doloremque aspernatur eius iste, cupiditate repudiandae, quis laboriosam ipsam, architecto sed dolorem quos enim optio eveniet dignissimos aliquam temporibus? Laboriosam ipsa veritatis nemo ab.
+        </div>
+        <div class="blog-list-home">
+          <div class="blog-thumbnail">
+            <div class="thumbnail-frame">
+
             </div>
           </div>
-          <div class="aside-work">
-            <div class="home-label aside-label">
-              <h4 class="home-label-title">WORK</h4>
-            </div>
-            <div class="aside-content-home">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum nam neque non rem rerum ipsa in doloremque aspernatur eius iste, cupiditate repudiandae, quis laboriosam ipsam, architecto sed dolorem quos enim optio eveniet dignissimos aliquam temporibus? Laboriosam ipsa veritatis nemo ab.
+          <div class="blog-list-content">
+            <h4>Blog Title Sample</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
+          </div>
+
+        </div>
+        <div class="blog-list-home">
+          <div class="blog-thumbnail">
+            <div class="thumbnail-frame">
+
             </div>
           </div>
-        </aside>
-     </section>
-     <footer>
-        footer
-     </footer>
+          <div class="blog-list-content">
+            <h4>Blog Title Sample</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
+          </div>
+
+        </div>
+        <div class="blog-list-home">
+          <div class="blog-thumbnail">
+            <div class="thumbnail-frame">
+
+            </div>
+          </div>
+          <div class="blog-list-content">
+            <h4>Blog Title Sample</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
+          </div>
+
+        </div>
+        <div class="blog-list-home">
+          <div class="blog-thumbnail">
+            <div class="thumbnail-frame">
+
+            </div>
+          </div>
+          <div class="blog-list-content">
+            <h4>Blog Title Sample</h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nam, vero facilis sint dolorem numquam veniam consequuntur repudiandae pariatur ipsa.
+          </div>
+
+        </div>
+      </div>
+
+      </div>
+    </article>
+    <aside>
+      <div class="aside-about">
+        <div class="home-label aside-label">
+          <h4 class="home-label-title">ABOUT</h4>
+        </div>
+        <div class="aside-content-home">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum nam neque non rem rerum ipsa in doloremque aspernatur eius iste, cupiditate repudiandae, quis laboriosam ipsam, architecto sed dolorem quos enim optio eveniet dignissimos aliquam temporibus?
+          Laboriosam ipsa veritatis nemo ab.
+        </div>
+      </div>
+      <div class="aside-work">
+        <div class="home-label aside-label">
+          <h4 class="home-label-title">WORK</h4>
+        </div>
+        <div class="aside-content-home">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum nam neque non rem rerum ipsa in doloremque aspernatur eius iste, cupiditate repudiandae, quis laboriosam ipsam, architecto sed dolorem quos enim optio eveniet dignissimos aliquam temporibus?
+          Laboriosam ipsa veritatis nemo ab.
+        </div>
+      </div>
+    </aside>
+  </section>
+  <footer>
+    footer
+  </footer>
 
   <section id="contact">
     <div class="overlay">
